created images folder

--- a/com.tp.sms/test-output/index.html
+++ b/com.tp.sms/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\mailm\AppData\Local\Temp\testng-eclipse--1187985783\testng-customsuite.xml</span>
+                    <span>C:\Users\mailm\AppData\Local\Temp\testng-eclipse-413969369\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -128,15 +128,15 @@
                   <a name="createStudentTest">
                   </a> <!-- createStudentTest -->
                   <span class="method-name">createStudentTest</span>
-                  <div class="stack-trace">org.openqa.selenium.InvalidArgumentException: invalid argument: File not found : C:\Users\mailm\git\repository4\com.tp.sms\src\test\resources\student.jpg
+                  <div class="stack-trace">org.openqa.selenium.InvalidArgumentException: invalid argument: File not found : ./com.tp.sms/resources/teacher.jpg
   (Session info: MicrosoftEdge=136.0.3240.50)
 Build info: version: &apos;4.18.0&apos;, revision: &apos;b6bf9de7cc*&apos;
 System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.4.1&apos;
 Driver info: org.openqa.selenium.edge.EdgeDriver
-Command: [ba8047914e4486bc049ced524c680cee, sendKeysToElement {value=[Ljava.lang.CharSequence;@7baf1f5a, id=f.AE8DC8EC8A355EEB78FD6F4947581D37.d.5084D2A1B74D472F929051AC293529FB.e.106}]
-Capabilities {acceptInsecureCerts: false, browserName: MicrosoftEdge, browserVersion: 136.0.3240.50, fedcm:accounts: true, ms:edgeOptions: {debuggerAddress: localhost:62695}, msedge: {msedgedriverVersion: 136.0.3240.50 (4e2c41645f24..., userDataDir: C:\Users\mailm\AppData\Loca...}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:62695/devtoo..., se:cdpVersion: 136.0.3240.50, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Element: [[EdgeDriver: MicrosoftEdge on windows (ba8047914e4486bc049ced524c680cee)] -&gt; id: fileToUpload]
-Session ID: ba8047914e4486bc049ced524c680cee
+Command: [e1928d48cbfc549b3bcb9313a06dbbbf, sendKeysToElement {id=f.AD5161670C46BE1A0B1A8005158FFF88.d.85B21CAEC09F0B2C697476D1F2EA69F4.e.116, value=[Ljava.lang.CharSequence;@254f906e}]
+Capabilities {acceptInsecureCerts: false, browserName: MicrosoftEdge, browserVersion: 136.0.3240.50, fedcm:accounts: true, ms:edgeOptions: {debuggerAddress: localhost:62831}, msedge: {msedgedriverVersion: 136.0.3240.50 (4e2c41645f24..., userDataDir: C:\Users\mailm\AppData\Loca...}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:62831/devtoo..., se:cdpVersion: 136.0.3240.50, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
+Element: [[EdgeDriver: MicrosoftEdge on windows (e1928d48cbfc549b3bcb9313a06dbbbf)] -&gt; id: g_fileToUpload]
+Session ID: e1928d48cbfc549b3bcb9313a06dbbbf
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
 	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
@@ -151,13 +151,12 @@ Session ID: ba8047914e4486bc049ced524c680cee
 	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:519)
 	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:223)
 	at org.openqa.selenium.remote.RemoteWebElement.sendKeys(RemoteWebElement.java:110)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
+	at jdk.internal.reflect.GeneratedMethodAccessor1.invoke(Unknown Source)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
 	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
 	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:51)
 	at jdk.proxy2/jdk.proxy2.$Proxy16.sendKeys(Unknown Source)
-	at com.tp.sms.ObjectRepository.StudentPage.createStud(StudentPage.java:281)
+	at com.tp.sms.ObjectRepository.StudentPage.createStud(StudentPage.java:297)
 	at com.tp.sms.StudentTest.createStudentTest(StudentTest.java:39)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
@@ -193,7 +192,7 @@ Session ID: ba8047914e4486bc049ced524c680cee
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\mailm\AppData\Local\Temp\testng-eclipse--1187985783\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\mailm\AppData\Local\Temp\testng-eclipse-413969369\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -246,12 +245,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'createStudentTest')
 data.setCell(0, 2, 'com.tp.sms.StudentTest')
-data.setCell(0, 3, 7173);
+data.setCell(0, 3, 8384);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -292,15 +291,15 @@ return data;
                 <img src="failed.png">
                 </img>
                 <span class="method-name">createStudentTest</span>
-                <span class="method-start">6326 ms</span>
+                <span class="method-start">6387 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">toLogout</span>
-                <span class="method-start">13515 ms</span>
+                <span class="method-start">14786 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">toClose</span>
-                <span class="method-start">18216 ms</span>
+                <span class="method-start">19444 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
