--- a/com.tp.sms/test-output/index.html
+++ b/com.tp.sms/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\mailm\AppData\Local\Temp\testng-eclipse--1543475980\testng-customsuite.xml</span>
+                    <span>C:\Users\mailm\AppData\Local\Temp\testng-eclipse--1006301995\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.tp.sms.StudentTest" class="method navigator-link" hash-for-method="createStudentTest">createStudentTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.tp.sms.SubjectTest" class="method navigator-link" hash-for-method="createSubjectTest">createSubjectTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.tp.sms.StudentTest</span>
+              <span class="class-name">com.tp.sms.SubjectTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createStudentTest">
-                  </a> <!-- createStudentTest -->
-                  <span class="method-name">createStudentTest</span>
+                  <a name="createSubjectTest">
+                  </a> <!-- createSubjectTest -->
+                  <span class="method-name">createSubjectTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\mailm\AppData\Local\Temp\testng-eclipse--1543475980\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\mailm\AppData\Local\Temp\testng-eclipse--1006301995\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.tp.sms.StudentTest&quot;/&gt;
+      &lt;class name=&quot;com.tp.sms.SubjectTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'createStudentTest')
-data.setCell(0, 2, 'com.tp.sms.StudentTest')
-data.setCell(0, 3, 20833);
+data.setCell(0, 1, 'createSubjectTest')
+data.setCell(0, 2, 'com.tp.sms.SubjectTest')
+data.setCell(0, 3, 7948);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 20 seconds</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -205,10 +205,11 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">createStudentTest</span>
+              <span class="reporter-method-name">createSubjectTest</span>
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output">Logged in successfully</span>
-                <span class="reporter-method-output">Student created successfully</span>
+                <span class="reporter-method-output">Subject created successfully</span>
+                <span class="reporter-method-output">Success! Your information has been successfully inserted in our database. verified</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -226,22 +227,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.tp.sms.StudentTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.tp.sms.SubjectTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">toLaunch(edge)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">createStudentTest</span>
-                <span class="method-start">6591 ms</span>
+                <span class="method-name">createSubjectTest</span>
+                <span class="method-start">4949 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">toLogout</span>
-                <span class="method-start">27427 ms</span>
+                <span class="method-start">12897 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">toClose</span>
-                <span class="method-start">31927 ms</span>
+                <span class="method-start">17706 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
