--- a/com.tp.sms/test-output/old/Default suite/reporter-output.html
+++ b/com.tp.sms/test-output/old/Default suite/reporter-output.html
@@ -1,6 +1,8 @@
 <h2>Reporter output</h2><table><tr><td>Browser got launched</td></tr>
 <tr><td>Browser got Maximized</td></tr>
 <tr><td>Logged in successfully</td></tr>
+<tr><td>Subject created successfully</td></tr>
+<tr><td>Success! Your information has been successfully inserted in our database. verified</td></tr>
 <tr><td>Logged out Successfully</td></tr>
 <tr><td>Browser got Closed Successfully</td></tr>
 </table>
