--- a/com.tp.sms/test-output/old/Suite/reporter-output.html
+++ b/com.tp.sms/test-output/old/Suite/reporter-output.html
@@ -1,17 +1,6 @@
 <h2>Reporter output</h2><table><tr><td>Browser got launched</td></tr>
 <tr><td>Browser got Maximized</td></tr>
 <tr><td>Logged in successfully</td></tr>
-<tr><td>My Profile Preview verified</td></tr>
-<tr><td>Navigated to Admin profile page successfully</td></tr>
-<tr><td>Logged out Successfully</td></tr>
-<tr><td>Browser got Closed Successfully</td></tr>
-<tr><td>Browser got launched</td></tr>
-<tr><td>Browser got Maximized</td></tr>
-<tr><td>Logged in successfully</td></tr>
-<tr><td>Logged out Successfully</td></tr>
-<tr><td>Logged in successfully</td></tr>
-<tr><td>Logged out Successfully</td></tr>
-<tr><td>Logged in successfully</td></tr>
 <tr><td>Logged out Successfully</td></tr>
 <tr><td>Browser got Closed Successfully</td></tr>
 <tr><td>Browser got launched</td></tr>
@@ -27,14 +16,6 @@
 <tr><td>Browser got launched</td></tr>
 <tr><td>Browser got Maximized</td></tr>
 <tr><td>Logged in successfully</td></tr>
-<tr><td>Student created successfully</td></tr>
-<tr><td>Logged out Successfully</td></tr>
-<tr><td>Browser got Closed Successfully</td></tr>
-<tr><td>Browser got launched</td></tr>
-<tr><td>Browser got Maximized</td></tr>
-<tr><td>Logged in successfully</td></tr>
-<tr><td>Grade created successfully</td></tr>
-<tr><td>Success! Your information has been successfully inserted in our database. verified</td></tr>
 <tr><td>Logged out Successfully</td></tr>
 <tr><td>Logged in successfully</td></tr>
 <tr><td>Grade created successfully</td></tr>
@@ -46,11 +27,29 @@
 <tr><td>Browser got launched</td></tr>
 <tr><td>Browser got Maximized</td></tr>
 <tr><td>Logged in successfully</td></tr>
+<tr><td>Success! Your information has been successfully inserted in our database. verified</td></tr>
+<tr><td>classroom_602 classroom created successfully</td></tr>
+<tr><td>Logged out Successfully</td></tr>
+<tr><td>Logged in successfully</td></tr>
+<tr><td>classroom_966 classroom created successfully</td></tr>
+<tr><td>Logged out Successfully</td></tr>
+<tr><td>Browser got Closed Successfully</td></tr>
 <tr><td>Browser got launched</td></tr>
 <tr><td>Browser got Maximized</td></tr>
 <tr><td>Logged in successfully</td></tr>
 <tr><td>Subject created successfully</td></tr>
-<tr><td>Success! Your information has been successfully inserted in our database. verified</td></tr>
+<tr><td>Logged out Successfully</td></tr>
+<tr><td>Browser got Closed Successfully</td></tr>
+<tr><td>Browser got launched</td></tr>
+<tr><td>Browser got Maximized</td></tr>
+<tr><td>Logged in successfully</td></tr>
+<tr><td>My Profile Preview verified</td></tr>
+<tr><td>Navigated to Admin profile page successfully</td></tr>
+<tr><td>Logged out Successfully</td></tr>
+<tr><td>Browser got Closed Successfully</td></tr>
+<tr><td>Browser got launched</td></tr>
+<tr><td>Browser got Maximized</td></tr>
+<tr><td>Logged in successfully</td></tr>
 <tr><td>Logged out Successfully</td></tr>
 <tr><td>Browser got Closed Successfully</td></tr>
 </table>
