--- a/com.tp.sms/test-output/emailable-report.html
+++ b/com.tp.sms/test-output/emailable-report.html
@@ -9,10 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">19,581</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">31,749</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.tp.sms.SubjectTest</td><td><a href="#m0">createSubjectTest</a></td><td rowspan="1">1746593935026</td><td rowspan="1">7948</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.tp.sms.StudentTest</td><td><a href="#m0">createStudentTest</a></td><td rowspan="1">1746594710228</td><td rowspan="1">20486</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.tp.sms.SubjectTest#createSubjectTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Logged in successfully<br/>Subject created successfully<br/>Success! Your information has been successfully inserted in our database. verified</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.tp.sms.StudentTest#createStudentTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Logged in successfully<br/>Student created successfully</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
